fixed layout issue

--- a/lab-christina/src/component/category-item/category-item.scss
+++ b/lab-christina/src/component/category-item/category-item.scss
@@ -2,7 +2,7 @@
 
 div.category-item {
   border: 1px solid $accent-color-lime;
-  width: 30%;
+  width: 100%;
   margin-top: 10px;
   display: block;
   float: left;
@@ -12,21 +12,23 @@ div.category-item {
 
 section.category-item {
   padding: 5px;
+  border-style: inset;
+  margin-bottom: 15px;
 }
+
 button.remove-button {
   color: $primary-color-purple;
-  background-color: white;
-  width: 20px;
+  height: 10px;
+  width: 10px;
   float: right;
   display: block;
-  margin: 1px;
+  margin-left: 4px;
 }
 
 button.update-button {
+  height: 10px;
   color: $primary-color-purple;
-  background-color: white;
-  width: 20px;
+  width: 10px;
   float: right;
   display: block;
-  margin: 1px;
 }
